* 2014-08-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 34147: Supply OneCharSequence with proper toString() implementation
 - Fix for bug 32635: Introduced designated "autocomplete" action for looking up contacts

* 2014-08-25 - marc.arens@open-xchange.com

 - Fix for bug 33952: Implement GroupDispatcher#dispose to completely reinitialize itself in case of severe errors

* 2014-08-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33748: Don't attempt to read more bytes from the buffer than available

* 2014-08-25 - thorben.betten@open-xchange.com

 - Fix for bug 34070: Fixed parsing of E-Mail address in case personal is mail-safe encoded
 - Fix for bug 33966: Apply string normalization only to non-ascii characters

* 2014-08-24 - thorben.betten@open-xchange.com

 - Fix for bug 33979: Restored libraries in c.o.subscribe.crawler bundle to maintain package compatibility

* 2014-08-20 - martin.herfurth@open-xchange.com

 - Fix for bug 33821: Avoid duplicate entries for participant tables.

* 2014-08-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 34075: Don't take over the UID from the original contact when creating a copy

* 2014-08-18 - thorben.betten@open-xchange.com

 - Fix for bug 34071: Properly build up namespace section in IMAP folder tree

* 2014-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 34035: Properly acquire message's source

* 2014-08-14 - martin.herfurth@open-xchange.com

 - Fix for bug 34041: Ignore additional elements in autoconfig xml.

* 2014-08-13 - martin.herfurth@open-xchange.com

 - Fix for bug 34023: Default display message for category user input.

* 2014-08-13 - tobias.friedrich@open-xchange.com

 - Fix for bug 34014: Adjusted example configuration to match corresponding comments

* 2014-08-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34006: Corrected hashCode() calculation for contacts

* 2014-08-08 - jan.bauerdick@open-xchange.com
