@@ -81,9 +81,7 @@ import com.openexchange.file.storage.json.FileMetadataParser;
 import com.openexchange.file.storage.json.actions.files.AbstractFileAction.Param;
 import com.openexchange.file.storage.json.services.Services;
 import com.openexchange.groupware.attach.AttachmentBase;
-import com.openexchange.groupware.infostore.utils.InfostoreConfigUtils;
 import com.openexchange.groupware.upload.UploadFile;
-import com.openexchange.groupware.upload.impl.UploadSizeExceededException;
 import com.openexchange.java.FileKnowingInputStream;
 import com.openexchange.java.Strings;
 import com.openexchange.java.UnsynchronizedByteArrayInputStream;
@@ -404,10 +402,9 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
 
     @Override
     public InputStream getUploadedFileData() throws OXException {
-        if(data.hasUploads()) {
+        if (data.hasUploads()) {
             try {
                 final UploadFile uploadFile = data.getFiles().get(0);
-                checkSize( uploadFile );
                 java.io.File tmpFile = uploadFile.getTmpFile();
                 return new FileKnowingInputStream(new FileInputStream(tmpFile), tmpFile);
             } catch (final FileNotFoundException e) {
@@ -415,7 +412,7 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
             }
         }
         if (contentData != null) {
-        	return new UnsynchronizedByteArrayInputStream(contentData);
+            return new UnsynchronizedByteArrayInputStream(contentData);
         }
         return null;
     }
@@ -494,18 +491,6 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
     @Override
     public InfostoreRequest requireFileMetadata() throws OXException {
         return requireBody();
-    }
-
-    private void checkSize(final UploadFile uploadFile) throws OXException{
-        final long maxSize = InfostoreConfigUtils.determineRelevantUploadSize();
-        if (maxSize == 0) {
-            return;
-        }
-
-        final long size = uploadFile.getSize();
-        if (size > maxSize) {
-            throw UploadSizeExceededException.create(size, maxSize, true);
-        }
     }
 
     private int getInt(final Param param) {
@@ -595,6 +580,9 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
                 file.setFileMIMEType(uploadFile.getContentType());
                 fields.add(File.Field.FILE_MIMETYPE);
             }
+
+            file.setFileSize(uploadFile.getSize());
+            fields.add(File.Field.FILE_SIZE);
             // TODO: Guess Content-Type
         }
 
@@ -612,6 +600,9 @@ public class AJAXInfostoreRequest implements InfostoreRequest {
         if (object.has("content")) {
         	try {
 				contentData = object.opt("content").toString().getBytes("UTF-8");
+
+                file.setFileSize(contentData.length);
+                fields.add(File.Field.FILE_SIZE);
 			} catch (UnsupportedEncodingException e) {
 				// IGNORE;
 			}
